# toaster

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
.github/workflows/: rust.yml
assets/: custom.css
src/: constant.rs  env.rs  error.rs  imgs.rs  main.rs  openai.rs  sound.rs  text.rs
src/i18n/: cn.rs  en.rs  ja.rs  mod.rs
src/native/: mod.rs
src/storage/: config_store.rs  data_store.rs  endpoint.rs  mod.rs  session.rs  setting.rs
src/tts/: mod.rs  tts.rs  voice.rs
src/user_interface/: app.rs  client_util.rs  mod.rs  router.rs  window.rs
src/user_interface/component/: confirm_box.rs  loading.rs  markdown.rs  mod.rs  reload.rs  toast.rs
src/user_interface/component/input/: checkbox.rs  radio.rs
src/user_interface/fragment/: chat.rs  markdown.rs  message.rs  mod.rs  model.rs  panel.rs  session_list.rs
src/user_interface/router/: chat.rs  endpoints.rs  index.rs  model.rs
src/user_interface/router/layout/: mod.rs  navigation.rs  top_navigation.rs
src/util/: jwt.rs  language.rs  mod.rs  sleep.rs  string_util.rs
