[package]
name = "toaster"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"

[dependencies]
dioxus = { version = "0.6.3", features = ["html", "router"] }
dioxus-html = { version = "*", features = ["file_engine"] }
dioxus-signals = "*"
manganis = "*"
dioxus-logger = { version = "*" }
#dioxus-sdk = { version = "*", features = ["storage"] }
tracing = "*"
serde = "1.0"
serde_json = { version = "1.0" }
serde_urlencoded = "0.7"
reqwest = { version = "0.12", features = ["json"] }
#http = { version = "1" }
uuid = { version = "1.14", default-features = false ,features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
opendal = { version = "0.51", default-features = false }
futures = "0.3"
derive_more = { version = "2.0", features = ["display", "from_str", "deref"] }
jwt-compact = { version = "0.8" }
anyhow = "1.0"
thiserror = "2.0"
once_cell = "1.20"
ciborium = "0.2"
async-lock = "3.4"
async-once-cell = "0.5"
strum_macros = "0.27"
#dotenv = "0.15"
dotenv_codegen = "0.15"
markdown = "1.0.0-alpha.22"

# web only
dioxus-web = { version = "0.6", optional = true }
gloo-timers = { version = "0.3", optional = true, features = ["futures"] }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Navigator",
    "AudioContext",
    "AudioBufferSourceNode",
    "AudioBuffer",
    "AudioDestinationNode",
    "SpeechSynthesis",
    "SpeechSynthesisUtterance",
    "SpeechSynthesisVoice",
    "BeforeUnloadEvent"
] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
opendal-indexeddb = { git = "https://github.com/TimJyun/opendal-indexeddb", optional = true }
# desktop only
dioxus-desktop = { version = "0.6", optional = true }
# mobile only
dioxus-mobile = { version = "0.6", optional = true }
# native only
tokio = { version = "*", optional = true }

#async-openai = { version ="0.27",optional = true}
async-openai-wasm = { version = "0.27" }



[features]
default = []
web = [
    "dioxus/web", "dioxus-web",
    "gloo-timers",
    "web-sys", "js-sys",
    "opendal-indexeddb",
    "uuid/js",
    "wasm-bindgen-futures"
]
desktop = [
    "dioxus/desktop",
    "dioxus-desktop",
    "native"
]
mobile = [
    "dioxus/mobile",
    "dioxus-mobile",
    "native"
]
native = [
    "opendal/services-fs",
    "tokio"
]
